Creating thank you page when footer form is filled

--- a/sections/newsletter-thank-you.liquid
+++ b/sections/newsletter-thank-you.liquid
@@ -43,6 +43,8 @@
 {% schema %}
 {
   "name": "Newsletter Thank You",
+  "tag": "section",
+  "class": "newsletter-thank-you-section-wrapper",
   "settings": [
     {
       "type": "text",
