--- a/snippets/product-main-content.liquid
+++ b/snippets/product-main-content.liquid
@@ -1,7 +1,4 @@
 {%- liquid
-  assign media_gallery = media_gallery | default: ''
-  assign product_details = product_details | default: ''
-  assign additional_blocks = additional_blocks | default: ''
   assign desktop_media_position = settings.desktop_media_position | default: 'left'
   assign swap_columns_mobile = settings.swap_columns_mobile | default: false
   assign padding_top_desktop = settings.padding_top_desktop | default: 60
@@ -16,6 +13,28 @@
   assign margin_bottom_mobile = settings.margin_bottom_mobile | default: 0
   assign section_height_desktop = settings.section_height_desktop | default: 600
   assign section_height_mobile = settings.section_height_mobile | default: 400
+  
+  assign media_gallery_content = ''
+  assign product_details_content = ''
+  assign additional_blocks_content = ''
+  
+  for block in section.blocks
+    case block.type
+      when 'product-media-gallery'
+        capture media_gallery_content
+          render block
+        endcapture
+      when 'product-details'
+        capture product_details_content
+          render block
+        endcapture
+      when '@app'
+        capture app_block_content
+          render block
+        endcapture
+        assign additional_blocks_content = additional_blocks_content | append: app_block_content
+    endcase
+  endfor
 -%}
 
 <div class="product-main-section" style="padding-top: {{ padding_top_desktop }}px; padding-bottom: {{ padding_bottom_desktop }}px; padding-left: {{ padding_horizontal_desktop }}px; padding-right: {{ padding_horizontal_desktop }}px; margin-top: {{ margin_top_desktop }}px; margin-bottom: {{ margin_bottom_desktop }}px;">
@@ -23,21 +42,21 @@
     <div class="row g-5 align-items-start {% if swap_columns_mobile %}flex-column-reverse flex-lg-row{% endif %}">
       <!-- Product Images Column -->
       <div class="col-lg-6 {% if desktop_media_position == 'right' %}order-lg-2{% endif %}">
-        {{ media_gallery }}
+        {{ media_gallery_content }}
       </div>
 
       <!-- Product Info Column -->
       <div class="col-lg-6 {% if desktop_media_position == 'right' %}order-lg-1{% endif %}">
-        {{ product_details }}
+        {{ product_details_content }}
       </div>
     </div>
     
     <!-- Additional Blocks (App Embeds, etc.) -->
-    {% if additional_blocks != blank %}
+    {% if additional_blocks_content != blank %}
       <div class="row mt-5">
         <div class="col-12">
           <div class="product-additional-blocks">
-            {{ additional_blocks }}
+            {{ additional_blocks_content }}
           </div>
         </div>
       </div>
