Block system for product main

--- a/sections/product-main.liquid
+++ b/sections/product-main.liquid
@@ -264,6 +264,54 @@
     {
       "type": "product-details",
       "name": "Product Details"
+    },
+    {
+      "type": "text",
+      "name": "Text",
+      "settings": [
+        {
+          "type": "richtext",
+          "id": "text",
+          "label": "Text",
+          "default": "<p>Add custom text content here</p>"
+        }
+      ]
+    },
+    {
+      "type": "richtext",
+      "name": "Rich Text",
+      "settings": [
+        {
+          "type": "richtext",
+          "id": "richtext",
+          "label": "Rich Text",
+          "default": "<p>Add rich text content here</p>"
+        }
+      ]
+    },
+    {
+      "type": "html",
+      "name": "Custom HTML",
+      "settings": [
+        {
+          "type": "html",
+          "id": "html",
+          "label": "HTML",
+          "default": "<p>Add custom HTML content here</p>"
+        }
+      ]
+    },
+    {
+      "type": "liquid",
+      "name": "Custom Liquid",
+      "settings": [
+        {
+          "type": "liquid",
+          "id": "liquid",
+          "label": "Liquid Code",
+          "default": "<!-- Add your Liquid code here -->"
+        }
+      ]
     }
   ],
   "settings": [
